--- a/order-management/package.json
+++ b/order-management/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "antd": "^4.21.0",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.52.3",
