--- a/order-management/package.json
+++ b/order-management/package.json
@@ -13,6 +13,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.52.3",
+    "uuid": "^8.3.2",
     "wouter": "^2.8.0-alpha.2",
     "zustand": "^4.0.0-rc.1"
   },
